[gd_scene load_steps=6 format=3 uid="uid://b1vqnb5p5p264"]

[ext_resource type="Script" path="res://LobbyScene.gd" id="1_dq81b"]
[ext_resource type="FontFile" uid="uid://ddxvv4lqu6s2u" path="res://JetBrainsMonoNerdFontMonoRegular.ttf" id="2_n2dhg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5oerf"]
bg_color = Color(0, 0, 0, 0.392157)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_73ied"]
bg_color = Color(0, 0, 0, 0.490196)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_smwp8"]
bg_color = Color(0, 0, 0, 0.686275)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="LobbyScene" type="Node2D"]
script = ExtResource("1_dq81b")
mainMenuScene = "res://MainMenuScene.tscn"
morseToTextScene = "res://MorseToTextScene.tscn"
textToMorseScene = "res://TextToMorseScene.tscn"
copyPracticeScene = "res://CopyPracticeScene.tscn"
sendPracticeScene = "res://SendPracticeScene.tscn"

[node name="BackgroundImage" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 688.0
color = Color(0.192157, 0.192157, 0.317647, 1)

[node name="ParentMarginContainer" type="MarginContainer" parent="."]
offset_right = 1152.0
offset_bottom = 688.0
theme_override_constants/margin_left = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 200

[node name="ContentVerticalContainer" type="VBoxContainer" parent="ParentMarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="ParentMarginContainer/ContentVerticalContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_n2dhg")
theme_override_font_sizes/font_size = 125
text = "Lobby"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameModesVerticalContainer" type="VBoxContainer" parent="ParentMarginContainer/ContentVerticalContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TextToMorseButtonMarginContainer" type="MarginContainer" parent="ParentMarginContainer/ContentVerticalContainer/GameModesVerticalContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="TextToMorseButton" type="Button" parent="ParentMarginContainer/ContentVerticalContainer/GameModesVerticalContainer/TextToMorseButtonMarginContainer"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("2_n2dhg")
theme_override_font_sizes/font_size = 75
theme_override_styles/normal = SubResource("StyleBoxFlat_5oerf")
theme_override_styles/hover = SubResource("StyleBoxFlat_73ied")
theme_override_styles/pressed = SubResource("StyleBoxFlat_smwp8")
text = "Text to Morse"

[node name="MorseToTextButtonMarginContainer" type="MarginContainer" parent="ParentMarginContainer/ContentVerticalContainer/GameModesVerticalContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="MorseToTextButton" type="Button" parent="ParentMarginContainer/ContentVerticalContainer/GameModesVerticalContainer/MorseToTextButtonMarginContainer"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("2_n2dhg")
theme_override_font_sizes/font_size = 75
theme_override_styles/normal = SubResource("StyleBoxFlat_5oerf")
theme_override_styles/hover = SubResource("StyleBoxFlat_73ied")
theme_override_styles/pressed = SubResource("StyleBoxFlat_smwp8")
text = "Morse to Text"

[node name="CopyPracticeButtonMarginContainer" type="MarginContainer" parent="ParentMarginContainer/ContentVerticalContainer/GameModesVerticalContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="CopyPracticeButton" type="Button" parent="ParentMarginContainer/ContentVerticalContainer/GameModesVerticalContainer/CopyPracticeButtonMarginContainer"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("2_n2dhg")
theme_override_font_sizes/font_size = 75
theme_override_styles/normal = SubResource("StyleBoxFlat_5oerf")
theme_override_styles/hover = SubResource("StyleBoxFlat_73ied")
theme_override_styles/pressed = SubResource("StyleBoxFlat_smwp8")
text = "Copy Practice"

[node name="SendPracticeButtonMarginContainer" type="MarginContainer" parent="ParentMarginContainer/ContentVerticalContainer/GameModesVerticalContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="SendPracticeButton" type="Button" parent="ParentMarginContainer/ContentVerticalContainer/GameModesVerticalContainer/SendPracticeButtonMarginContainer"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("2_n2dhg")
theme_override_font_sizes/font_size = 75
theme_override_styles/normal = SubResource("StyleBoxFlat_5oerf")
theme_override_styles/hover = SubResource("StyleBoxFlat_73ied")
theme_override_styles/pressed = SubResource("StyleBoxFlat_smwp8")
text = "Send Practice"

[connection signal="button_up" from="ParentMarginContainer/ContentVerticalContainer/GameModesVerticalContainer/TextToMorseButtonMarginContainer/TextToMorseButton" to="." method="_on_text_to_morse_button_button_up"]
[connection signal="button_up" from="ParentMarginContainer/ContentVerticalContainer/GameModesVerticalContainer/MorseToTextButtonMarginContainer/MorseToTextButton" to="." method="_on_morse_to_text_button_button_up"]
[connection signal="button_up" from="ParentMarginContainer/ContentVerticalContainer/GameModesVerticalContainer/CopyPracticeButtonMarginContainer/CopyPracticeButton" to="." method="_on_copy_practice_button_button_up"]
[connection signal="button_up" from="ParentMarginContainer/ContentVerticalContainer/GameModesVerticalContainer/SendPracticeButtonMarginContainer/SendPracticeButton" to="." method="_on_send_practice_button_button_up"]
